# glassNote

./: .gitignore  CMakeLists.txt  README.md  TODO.md  date (B).lnk
docs/: optional-future-features.md
packaging/: glassNote.iss
resources/: icons.qrc
resources/windows/: app_icon.rc.in
scripts/: package_release.bat  push_with_comment.bat  release_pipeline.bat  run_load_edit_save_reload_integration.bat  upload_release_assets.bat  upload_release_assets.ps1
src/: main.cpp
src/animation/: AnimationCoordinator.cpp  AnimationCoordinator.h
src/app/: AppController.cpp  AppController.h  AppStateWorkflow.cpp  AppStateWorkflow.h
src/common/: Constants.h
src/model/: AppState.h  NoteItem.h  UiStyle.h
src/platform/windows/: WindowsBlurHelper.cpp  WindowsBlurHelper.h
src/storage/: AutoSaveCoordinator.cpp  AutoSaveCoordinator.h  JsonStorageService.cpp  JsonStorageService.h
src/theme/: ThemeHelper.cpp  ThemeHelper.h
src/ui/: MainWindow.cpp  MainWindow.h  NoteCardWidget.cpp  NoteCardWidget.h  NotesBoardWidget.cpp  NotesBoardWidget.h
tests/: test_suite.cpp
tests/integration/: test_load_edit_save_reload.cpp
tests/perf/: test_many_notes.cpp
tests/unit/: test_serialization_and_workflow.cpp
